[gd_scene load_steps=9 format=2]

[ext_resource path="res://recursos/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/menus/MenuPausa.gd" type="Script" id=2]
[ext_resource path="res://juego/menus/botones/BotonMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/menus/botones/BotonSalir.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.51779, 0, 0, 1 )
border_width_bottom = 6
border_color = Color( 0.376471, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.305882, 0, 0, 1 )
border_width_bottom = 6
border_color = Color( 0.172549, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.878431, 0, 0, 1 )
border_width_bottom = 6
border_color = Color( 0.588235, 0, 0, 1 )

[node name="MenuPausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 1, 0.741176, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -161.5
margin_right = 139.0
margin_bottom = 161.5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -99.5
margin_right = 102.5
margin_bottom = 99.5
custom_constants/separation = 15

[node name="BotonContinuar" parent="Panel/VBoxContainer" instance=ExtResource( 3 )]
margin_bottom = 30.0
text = "Continuar"

[node name="BotonMenuPrincipal" parent="Panel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 45.0
margin_bottom = 75.0
text = "Menu Principal"

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_top = 90.0
margin_right = 205.0
margin_bottom = 104.0
text = "Volumen general:"

[node name="SliderVolumen" type="HSlider" parent="Panel/VBoxContainer"]
margin_top = 119.0
margin_right = 205.0
margin_bottom = 135.0
min_value = -50.0
max_value = 0.0

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 150.0
margin_right = 205.0
margin_bottom = 154.0

[node name="BotonSalir" type="Button" parent="Panel/VBoxContainer"]
margin_top = 169.0
margin_right = 205.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Salir"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/VBoxContainer/BotonContinuar" to="." method="_on_BotonContinuar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BotonMenuPrincipal" to="." method="_on_BotonMenuPrincipal_pressed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SliderVolumen" to="." method="_on_SliderVolumen_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/BotonSalir" to="Panel/VBoxContainer/BotonSalir" method="_on_pressed"]
